[project]
name = "medical-alphaedit-verification"
version = "0.1.0"
description = "Feasibility verification of Medical AlphaEdit framework for Vision Transformers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "timm>=0.9.0",
    "medmnist>=2.2.0",
    "pillow>=9.5.0",
    "scikit-learn>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.0",
    "ipython>=8.12.0",
]
